# wemod-launcher

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci-tests.yml  pull-requests-depends.yml
docs/: 01-arg-parser.md  02-settings-manager.md  04-error-handling.md  05-logging.md  06-prefix-management.md  07-wand-lifecycle.md  08-configuration.md  09-monitor-contract.md  10-path-utils.md  11-launch-flow.md  12-cli-commands.md  13-ui-interface.md  14-build-and-distribution.md  15-updates-and-versioning.md  16-platform-and-ecosystem.md  base-guidelines.md  goals.md  implementation.md
issues/: 01-cli-interface.md  02-settings-manager.md  03-error-handling.md  04-event-bus-logging.md  05-prefix-management.md  06-wand-lifecycle.md  07-configuration.md  08-process-monitor-and-ipc.md  09-path-utilities.md  10-launch-flow.md  11-ui-interface.md  12-build-and-distribution.md  13-updates-versioning-and-ci.md  14-platform-and-naming.md  15-codebase-restructure.md
src/: mainutils.py  setup.py  wemod.bat  wemod.py
src/wand_launcher/: __main__.py  entry_point.py  launcher.py
src/wand_launcher/core/: guards.py  runner.py  settings.py
src/wand_launcher/logging/: event_bus.py
src/wand_launcher/ui/: cli.py  detect.py
